// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders a disabled tab 1`] = `
<div
  class="container"
>
  <a
    class="disabledTabRow"
  >
    One
  </a>
  <a
    class="row"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders a tab with a href 1`] = `
<div
  class="container"
>
  <a
    class="row"
    href="//example"
  >
    One
  </a>
  <a
    class="row"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders a tab with an onClick 1`] = `
<div
  class="container"
>
  <a
    class="row"
  >
    One
  </a>
  <a
    class="row"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders an active tab 1`] = `
<div
  class="container"
>
  <a
    class="activeTabRow"
  >
    One
  </a>
  <a
    class="row"
  >
    Two
  </a>
</div>
`;

exports[`Tabs renders basic tabs 1`] = `
<div
  class="container"
>
  <a
    class="row"
  >
    One
  </a>
  <a
    class="row"
  >
    Two
  </a>
</div>
`;
